--- a/index.html
+++ b/index.html
@@ -390,19 +390,19 @@
             <img src="images/order-img.jpg" alt="">
         </div>
 
-        <form action="">
+        <form action="/" method="post">
 
             <div class="inputBox">
-                <input type="text" placeholder="name">
-                <input type="email" placeholder="email">
+                <input type="text" name="name" placeholder="name">
+                <input type="email" name="email placeholder="email">
             </div>
 
             <div class="inputBox">
-                <input type="number" placeholder="number">
-                <input type="text" placeholder="food name">
+                <input type="number" name="pnum" placeholder="number">
+                <input type="text" name="oname" placeholder="food name">
             </div>
 
-            <textarea placeholder="address" name="" id="" cols="30" rows="10"></textarea>
+            <textarea placeholder="address" name="address" id="" cols="30" rows="10"></textarea>
 
             <input type="submit" value="order now" class="btn">
 
