--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
             <div class="inputBox">
                 <input type="text" name="name" placeholder="name">
-                <input type="email" name="email placeholder="email">
+                <input type="email" name="email" placeholder="email">
             </div>
 
             <div class="inputBox">
